// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LogEntryTableRow /> renders correctly 1`] = `
<TableRow
  as="tr"
  cellAs="td"
  className="LogEntryTableRow"
  verticalAlign="top"
>
  <Responsive
    as={[Function]}
    className="LogEntryTableRowCreatedAt"
    collapsing={true}
    getWidth={[Function]}
    minWidth={992}
  >
    <CreatedAt
      item={
        Object {
          " $fragmentRefs": null,
          " $refType": null,
          "createdAt": "createdAt",
          "level": "INFO",
          "owner": Object {
            "id": "ownerId",
          },
        }
      }
      onClickSourceFile={[MockFunction]}
      prevItem={null}
    />
  </Responsive>
  <TableCell
    as="td"
    collapsing={true}
  >
    <Namespace
      item={
        Object {
          " $fragmentRefs": null,
          " $refType": null,
          "createdAt": "createdAt",
          "level": "INFO",
          "owner": Object {
            "id": "ownerId",
          },
        }
      }
      onClickSourceFile={[MockFunction]}
      prevItem={null}
    />
  </TableCell>
  <TableCell
    as="td"
    className="LogEntryTableRowLevel"
    collapsing={true}
    error={false}
    warning={false}
  >
    INFO
  </TableCell>
  <TableCell
    as="td"
  >
    <ForwardRef(Relay(LogEntryMessage))
      item={
        Object {
          " $fragmentRefs": null,
          " $refType": null,
          "createdAt": "createdAt",
          "level": "INFO",
          "owner": Object {
            "id": "ownerId",
          },
        }
      }
      onClickSourceFile={[MockFunction]}
    />
  </TableCell>
</TableRow>
`;

exports[`<Namespace /> renders correctly 1`] = `
<Fragment>
  owner.id
</Fragment>
`;

exports[`<Namespace /> renders correctly when the owner is a longStringer 1`] = `
<Fragment>
  longString
</Fragment>
`;

exports[`<Namespace /> renders correctly when the owner is a stringer 1`] = `
<Fragment>
  string
</Fragment>
`;
